--- a/.github/workflows/integration-build.yml
+++ b/.github/workflows/integration-build.yml
@@ -350,8 +350,8 @@ jobs:
       # Set TDD environment variables
       - name: Set TDD Environment Variables
         run: |
-          echo "TDD_RESOURCE_GROUP=bootcamp-tdd-github-${BUILD_BUILDNUMBER}" >> $GITHUB_ENV
-          echo "TDD_APP_NAME=tdd-ui" >> $GITHUB_ENV
+          echo "TDD_RESOURCE_GROUP=bootcamp-tdd" >> $GITHUB_ENV
+          echo "TDD_APP_NAME=ui-gh" >> $GITHUB_ENV
 
       # Install .NET SDK 6.0 (required by Octopus CLI tool - includes runtime)
       - name: Setup .NET SDK 6.0
@@ -382,24 +382,98 @@ jobs:
           version: latest        
 
       - name: Set Octopus variables for TDD deployment
+        shell: pwsh
         run: |
-          octo set-variable \
-            --server="${{ secrets.OCTOPUS_URL }}" \
-            --apiKey="${{ secrets.OCTO_API_KEY }}" \
-            --space="${{ vars.OCTOPUS_SPACE }}" \
-            --project="${{ vars.OCTOPUS_PROJECT }}" \
-            --name="ResourceGroupName" \
-            --value="${{ env.TDD_RESOURCE_GROUP }}" \
-            --environment="TDD"
+          $octopusUrl = "${{ secrets.OCTOPUS_URL }}"
+          $apiKey = "${{ secrets.OCTO_API_KEY }}"
+          $spaceName = "${{ vars.OCTOPUS_SPACE }}"
+          $projectName = "${{ vars.OCTOPUS_PROJECT }}"
+          $headers = @{ "X-Octopus-ApiKey" = $apiKey }
           
-          octo set-variable \
-            --server="${{ secrets.OCTOPUS_URL }}" \
-            --apiKey="${{ secrets.OCTO_API_KEY }}" \
-            --space="${{ vars.OCTOPUS_SPACE }}" \
-            --project="${{ vars.OCTOPUS_PROJECT }}" \
-            --name="container_app_name" \
-            --value="${{ env.TDD_APP_NAME }}" \
-            --environment="TDD"
+          Write-Host "Setting Octopus variables for TDD deployment..."
+          Write-Host "ResourceGroupName: ${{ env.TDD_RESOURCE_GROUP }}"
+          Write-Host "container_app_name: ${{ env.TDD_APP_NAME }}"
+          
+          # Get space ID
+          $spaces = Invoke-RestMethod -Uri "$octopusUrl/api/spaces/all" -Headers $headers
+          $space = $spaces | Where-Object { $_.Name -eq $spaceName }
+          if (-not $space) {
+            Write-Error "Space '$spaceName' not found"
+            exit 1
+          }
+          $spaceId = $space.Id
+          Write-Host "Found space: $spaceName (ID: $spaceId)"
+          
+          # Get project
+          $project = Invoke-RestMethod -Uri "$octopusUrl/api/$spaceId/projects/$projectName" -Headers $headers
+          if (-not $project) {
+            Write-Error "Project '$projectName' not found"
+            exit 1
+          }
+          $variableSetId = $project.VariableSetId
+          Write-Host "Found project: $projectName (VariableSetId: $variableSetId)"
+          
+          # Get TDD environment ID
+          $environments = Invoke-RestMethod -Uri "$octopusUrl/api/$spaceId/environments/all" -Headers $headers
+          $tddEnv = $environments | Where-Object { $_.Name -eq "TDD" }
+          if (-not $tddEnv) {
+            Write-Error "Environment 'TDD' not found"
+            exit 1
+          }
+          $tddEnvId = $tddEnv.Id
+          Write-Host "Found TDD environment (ID: $tddEnvId)"
+          
+          # Get current variable set
+          $variableSet = Invoke-RestMethod -Uri "$octopusUrl/api/$spaceId/variables/$variableSetId" -Headers $headers
+          
+          # Function to set or update variable
+          function Set-OctopusVariable {
+            param($Name, $Value, $EnvironmentId)
+            
+            $existingVar = $variableSet.Variables | Where-Object { 
+              $_.Name -eq $Name -and 
+              ($_.Scope.Environment -eq $null -or $_.Scope.Environment -contains $EnvironmentId)
+            } | Select-Object -First 1
+            
+            if ($existingVar) {
+              # Update existing variable
+              $existingVar.Value = $Value
+              if ($null -eq $existingVar.Scope) {
+                $existingVar.Scope = @{}
+              }
+              if ($null -eq $existingVar.Scope.Environment) {
+                $existingVar.Scope.Environment = @()
+              }
+              if ($existingVar.Scope.Environment -notcontains $EnvironmentId) {
+                $existingVar.Scope.Environment += $EnvironmentId
+              }
+              Write-Host "Updated variable: $Name = $Value (scoped to TDD)"
+            } else {
+              # Create new variable
+              $newVar = @{
+                Id = [System.Guid]::NewGuid().ToString()
+                Name = $Name
+                Value = $Value
+                Scope = @{
+                  Environment = @($EnvironmentId)
+                }
+                IsEditable = $true
+                IsSensitive = $false
+                Type = "String"
+              }
+              $variableSet.Variables += $newVar
+              Write-Host "Created variable: $Name = $Value (scoped to TDD)"
+            }
+          }
+          
+          # Set variables
+          Set-OctopusVariable -Name "ResourceGroupName" -Value "${{ env.TDD_RESOURCE_GROUP }}" -EnvironmentId $tddEnvId
+          Set-OctopusVariable -Name "container_app_name" -Value "${{ env.TDD_APP_NAME }}" -EnvironmentId $tddEnvId
+          
+          # Save variable set
+          $body = $variableSet | ConvertTo-Json -Depth 10
+          Invoke-RestMethod -Uri "$octopusUrl/api/$spaceId/variables/$variableSetId" -Method Put -Headers $headers -Body $body -ContentType "application/json" | Out-Null
+          Write-Host "✅ Variables saved successfully to Octopus"
 
       - name: Create release and deploy to TDD
         uses: OctopusDeploy/create-release-action@v1
