--- a/src/Worker/Worker.csproj
+++ b/src/Worker/Worker.csproj
@@ -8,12 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClearMeasure.HostedEndpoint.SqlServerTransport" Version="1.0.21" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.2" />
+    <ProjectReference Include="..\ChurchBulletin.ServiceDefaults\ChurchBulletin.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ChurchBulletin.ServiceDefaults\ChurchBulletin.ServiceDefaults.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <Reference Include="ClearMeasure.HostedEndpoint">
+      <HintPath>..\..\lib\ClearMeasure.HostedEndpoint.dll</HintPath>
+    </Reference>
+    <Reference Include="ClearMeasure.HostedEndpoint.SqlServerTransport">
+      <HintPath>..\..\lib\ClearMeasure.HostedEndpoint.SqlServerTransport.dll</HintPath>
+    </Reference>
+    <Reference Include="ClearMeasure.HostedService">
+      <HintPath>..\..\lib\ClearMeasure.HostedService.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
