--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=ChurchBulletin;Integrated Security=true;MultipleActiveResultSets=true"
+    "SqlConnectionString": "server=(LocalDb)\\MSSQLLocalDB;database=ChurchBulletin;Integrated Security=true;MultipleActiveResultSets=true"
   }
 }
