--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,10 @@ jobs:
       github.event_name == 'workflow_run' &&
       github.event.workflow_run.conclusion == 'success'
     concurrency:
-      # A newer version deploying to TDD will cancel any previous pending or in-progress run.
+      # All TDD deploys share one group (single environment), but only branch runs
+      # can be cancelled. Master/main deploys are never cancelled -- they queue instead.
       group: deploy-to-tdd-serialized
-      cancel-in-progress: true
+      cancel-in-progress: ${{ github.event.workflow_run.head_branch != 'master' && github.event.workflow_run.head_branch != 'main' }}
     runs-on: ubuntu-latest
     permissions:
       contents: read
