--- a/src/AcceptanceTests/appsettings.acceptancetests.json
+++ b/src/AcceptanceTests/appsettings.acceptancetests.json
@@ -4,6 +4,7 @@
   },
   "ApplicationBaseUrl": "https://localhost:7174",
   "StartLocalServer": "true",
+  "StartWorker": "true",
   "SkipScreenshotsForSpeed": "true",
   "SlowMo": "100",
   "HeadlessTestBrowser": "true"
